err/h10n.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/h10n'...
Compiling './lib/python3.5/site-packages/h10n/core.py'...
***   File "./lib/python3.5/site-packages/h10n/core.py", line 247
    exec filter in {'self': self, 'helper': helper}, self.__dict__
              ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/h10n/helper'...
Listing './lib/python3.5/site-packages/h10n/tests'...
Listing './lib/python3.5/site-packages/h10n/tests/core_test'...
Listing './lib/python3.5/site-packages/h10n/tests/helper_test'...
Listing './lib/python3.5/site-packages/h10n/tests/source_test'...
Listing './lib/python3.5/site-packages/h10n/tests/translator_test'...
Listing './lib/python3.5/site-packages/h10n/tests/util_test'...
Compiling './lib/python3.5/site-packages/h10n/tests/util_test/exception_context_test.py'...
***   File "./lib/python3.5/site-packages/h10n/tests/util_test/exception_context_test.py", line 41
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/h10n/util.py'...
***   File "./lib/python3.5/site-packages/h10n/util.py", line 183
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/h10n-0.1b1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
